setup docker compose

--- a/express/Dockerfile
+++ b/express/Dockerfile
@@ -1,12 +1,17 @@
 FROM node:latest
-ENV NODE_ENV=production
 
-WORKDIR /src/app
+WORKDIR /app
 
-COPY ["package.json", "package-lock.json*", "./"]
-
-RUN npm install --production
+COPY package*.json ./
+RUN npm install --only=production
 
 COPY . .
 
-CMD ["node", "index.js"]
+EXPOSE 8080
+
+ENV NODE_ENV=production
+ENV MONGO_HOST=localhost
+ENV DB_PORT=27017
+ENV DB_NAME=Mailize
+
+CMD ["npm", "start"]
