--- a/express/package.json
+++ b/express/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "SET NODE_ENV=production&& node ./src/index.js",
+    "start": "node ./src/index.js",
     "dev": "SET NODE_ENV=development&& nodemon ./src/index.js"
   },
   "keywords": [],
