--- a/mailize/package.json
+++ b/mailize/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "SET NODE_ENV=development&& next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -12,19 +12,21 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.11.16",
-    "@next/font": "^13.3.0",
+    "@mui/material": "^5.12.1",
     "@types/node": "18.15.11",
-    "@types/react": "18.0.33",
+    "@types/react": "18.0.37",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
-    "eslint": "8.37.0",
+    "axios": "^1.3.5",
+    "dotenv": "^16.0.3",
+    "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.3.0",
-    "postcss": "8.4.21",
+    "postcss": "8.4.22",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.1",
-    "typescript": "5.0.3"
+    "typescript": "5.0.4"
   }
 }
