--- a/mailize/package.json
+++ b/mailize/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^9.0.0",
     "next": "13.3.0",
     "next-auth": "^4.22.1",
+    "nextjs-progressbar": "^0.0.16",
     "postcss": "8.4.22",
     "react": "18.2.0",
     "react-dom": "18.2.0",
