--- a/mailize/package.json
+++ b/mailize/package.json
@@ -22,6 +22,7 @@
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "next": "13.3.0",
     "next-auth": "^4.22.1",
     "nextjs-progressbar": "^0.0.16",
