--- a/express/Dockerfile
+++ b/express/Dockerfile
@@ -1,13 +1,11 @@
-FROM node:latest
+FROM node:16-alpine
 
-WORKDIR /app
+WORKDIR /app/express
 
 COPY package*.json ./
 RUN npm install --only=production
 
 COPY . .
-
-EXPOSE 8080
 
 ENV NODE_ENV=production
 ENV MONGO_HOST=localhost
