use lexical editor

--- a/mailize/package.json
+++ b/mailize/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@hookform/resolvers": "^3.1.0",
+    "@lexical/react": "^0.10.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.1",
     "@types/node": "18.15.11",
@@ -22,6 +23,7 @@
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "jsonwebtoken": "^9.0.0",
+    "lexical": "^0.10.0",
     "moment": "^2.29.4",
     "next": "13.3.0",
     "next-auth": "^4.22.1",
