--- a/express/Dockerfile
+++ b/express/Dockerfile
@@ -1,6 +1,6 @@
-FROM node:16-alpine
+FROM node:18-alpine
 
-WORKDIR /app/express
+WORKDIR /app
 
 COPY package*.json ./
 RUN npm install --only=production
