--- a/mailize/package.json
+++ b/mailize/package.json
@@ -25,7 +25,7 @@
     "jsonwebtoken": "^9.0.0",
     "lexical": "^0.10.0",
     "moment": "^2.29.4",
-    "next": "13.3.0",
+    "next": "^13.4.1-canary.2",
     "next-auth": "^4.22.1",
     "nextjs-progressbar": "^0.0.16",
     "postcss": "8.4.22",
