--- a/mailize/package.json
+++ b/mailize/package.json
@@ -15,6 +15,7 @@
     "@lexical/react": "^0.10.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.1",
+    "@next/font": "^13.4.1",
     "@types/node": "18.15.11",
     "@types/react": "18.0.37",
     "@types/react-dom": "18.0.11",
@@ -25,7 +26,7 @@
     "jsonwebtoken": "^9.0.0",
     "lexical": "^0.10.0",
     "moment": "^2.29.4",
-    "next": "^12.3.4",
+    "next": "^13.4.1",
     "next-auth": "^4.22.1",
     "nextjs-progressbar": "^0.0.16",
     "postcss": "8.4.22",
